<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EditTaskActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="16dp">

        <TextView
            android:id="@+id/taskNameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/task_name"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/taskNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:ems="10"
            android:hint="@string/task_hint"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/taskDateTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/task_date"
            android:textSize="18sp" />

        <Button
            android:id="@+id/taskDateButton"
            style="?android:spinnerStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginBottom="20dp"
            android:onClick="openDatePicker"
            android:text="@string/date_sample"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/taskCatTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/task_category"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/spinnerTaskCat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>